# ROS_RobotArm_Control

./: README.md
install/: local_setup.sh  setup.sh
install/arm_control/include/arm_control/: Control_Node.h  Inverse_Resolse.h
install/arm_control/share/arm_control/: package.dsv  package.ps1  package.sh  package.xml
install/inverse_arm/share/inverse_arm/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/Universal_Robots_ROS2_Description/: .pre-commit-config.yaml  CHANGELOG.rst  package.xml
src/Universal_Robots_ROS2_Description/.github/: mergify.yml
src/Universal_Robots_ROS2_Description/.github/workflows/: humble-binary-main.yml  humble-binary-testing.yml  kilted-binary-main.yml  kilted-binary-testing.yml  rolling-binary-main.yml  rolling-binary-testing.yml
src/Universal_Robots_ROS2_Description/config/ur10/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/config/ur10e/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/config/ur12e/: physical_parameters.yaml
src/Universal_Robots_ROS2_Description/doc/: index.rst
src/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
src/Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
src/arm_control/: CMakeLists.txt
src/arm_control/launch/: launch_contorl.py
src/arm_control/src/: control_node.cpp  inverse_resolse.cpp  main.cpp
(+202 files in other folders)
